fix(Datagrid): add missing border to last nested row

--- a/packages/cloud-cognitive/src/components/Datagrid/styles/_useNestedRows.scss
+++ b/packages/cloud-cognitive/src/components/Datagrid/styles/_useNestedRows.scss
@@ -9,6 +9,7 @@
 @import './variables';
 
 .#{$carbon-prefix}--data-table tr.#{$block-class}__carbon-nested-row {
+  position: relative;
   border-left: 1px solid transparent;
 
   .#{$block-class}__cell {
@@ -28,4 +29,17 @@
   .#{$block-class}__carbon-row-expanded
   td:first-child {
   border-bottom: none;
+}
+
+.#{$block-class}
+  tr.#{$block-class}__carbon-nested-row
+  + :not(tr.#{$block-class}__carbon-nested-row)::before {
+  position: absolute;
+  /* stylelint-disable-next-line carbon/layout-token-use */
+  top: -1px;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: $border-subtle;
+  content: '';
 }
